--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,10 +3,12 @@ plugins {
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
+    id "com.google.gms.google-services"
+
 }
 
 android {
-    namespace = "com.example.govscout"
+    namespace = "com.infinitycodeworks.govscout"
     compileSdk = 36
     ndkVersion = "27.0.12077973"
 
@@ -21,7 +23,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.govscout"
+        applicationId = "com.infinitycodeworks.govscout"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = 23
@@ -46,3 +48,13 @@ android {
 flutter {
     source = "../.."
 }
+
+dependencies {
+  // Import the Firebase BoM
+  implementation platform('com.google.firebase:firebase-bom:34.6.0')
+
+  // TODO: Add the dependencies for Firebase products you want to use
+  // When using the BoM, don't specify versions in Firebase dependencies
+  // https://firebase.google.com/docs/android/setup#available-libraries
+}
+
