--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,21 @@
+buildscript {
+    // ext.kotlin_version = '1.7.21'
+    // ext.kotlin_version = '2.1.0'
+    // ext.kotlin_version = '1.7.22'1.9.23
+    ext.kotlin_version = '1.9.23'
+
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.gms:google-services:4.4.4"
+    }
+}
+
+
 allprojects {
     repositories {
         google()
