--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  firebase_core: ^4.2.1
+  firebase_auth: ^6.1.2
+  cloud_firestore: ^6.1.0
+  go_router: ^16.1.0
+  flutter_bloc: ^9.1.1
+  bloc: ^9.1.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
