--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   bloc: ^9.1.0
   intl: ^0.20.2
+  google_fonts: ^6.3.0
 
 dev_dependencies:
   flutter_test:
