--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   bloc: ^9.1.0
   intl: ^0.20.2
   google_fonts: ^6.3.0
+  firebase_messaging: ^16.1.0
+  flutter_local_notifications: ^19.5.0
+  http: ^1.6.0
 
 dev_dependencies:
   flutter_test:
